--- a/no-ref.html
+++ b/no-ref.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-	<title>Url-Shorten-Worker</title>
+	<title>Url-Shortlink-Worker</title>
 	<meta http-equiv="Refresh" content="1; url={Replace}" />
 	<meta name="referrer" content="no-referrer" />
 </head>
 
 <body>
 	<p>Redirecting..<br /><a href="{Replace}">{Replace}</a></p>
-	<a href="https://github.com/xyTom/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a>
+	<a href="https://mikrodinet.github.io/shortlink" target="_self">Fork me on GitHub</a>
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		setTimeout('window.location.replace( "{Replace}" + window.location.hash );', 1000 )
