--- a/safe-browsing.html
+++ b/safe-browsing.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="txt/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
-  <title>Warning! The URL you are visiting is risky.|Shorter URL</title>
+  <title>Warning! The URL you are visiting is Shortlink Url |Shortlink URL Site Free</title>
   <style>
     * {
       margin: 0;
@@ -68,7 +68,7 @@
         For your protection, we will not automatically redirect to this url. We recommend that you close this page and stop visiting that url, if you still need to visit, please manually copy the url link address into the address bar of your browser to open. Thank you.
       </div>    
       <div class="card-text">
-        Powered By: <a href="https://github.com/xyTom/Url-Shorten-Worker/" target="_self">Url Shorten Worker</a>
+        Powered By: <a href="https://mikrodinet.github.io/shortlink" target="_self">Url Shorten Worker</a>
       </div>
       <p id="notice"></p>             
     </div>
