--- a/theme/urlcool/index.html
+++ b/theme/urlcool/index.html
@@ -10,7 +10,7 @@
     else if(window.screen.width<=769)
     document.getElementsByTagName('meta')['viewport'].content="initial-scale=0.6, maximum-scale=1.0, minimum-scale=0.6, user-scalable=no"
   </script>
-  <title>Shorter Url</title>
+  <title>Shortlink Url Site Free 100% Work</title>
   <style>
     * {
       margin: 0;
@@ -189,7 +189,7 @@ color: #3F76FF;
         <button class="btn-cus" type="button" onclick='shorturl()' id="searchbtn">Shorten it</button>
       </div>    
       <div class="card-text">
-        Powered by <a href="https://github.com/xyTom/Url-Shorten-Worker/" target="_self">xyTom</a>
+        Powered by <a href="https://mikrodinet.github.io/shortlink" target="_self">xyTom</a>
       </div>
       <p id="notice"></p>             
     </div>
