--- a/index-demo.html
+++ b/index-demo.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="txt/html; charset=utf-8" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
-<title>5hort it|Url shorten</title>
+<title>5hort it|Url shortlink | Link Safe</title>
 <style>
 html, body {
   height: 100%;
@@ -28,7 +28,7 @@ justify-content: center;
 vertical-align: center;
 flex-wrap: wrap;
 align-content: center;">
-<a href="https://github.com/xyTom/Url-Shorten-Worker/">
+<a href="https://mikrodinet.github.io/shortlink/">
   <img style="position: absolute; top: 0; right: 0; border: 0;" 
   src="https://cdn.jsdelivr.net/npm/url-shorten-worker@latest/github.png"
   alt="Fork me on GitHub" >
